@@ -12,3 +12,6 @@ gray_wrap64=hsv64_0_0_0:1:0
 gray256=hsv256_0_0_0:1
 gray_wrap256=hsv256_0_0_0:1:0
 
+#res_by_angle=res_by_angle_overrides,spread+53*12
+
+
