@@ -1,0 +1,3 @@
+60 = 0.9,0.45,0.0   # triangle
+36 = 0.7,0.1,0.2    # pentagram
+
